--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+        env:
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          AUTH0_ID: ${{ secrets.AUTH0_ID }}
+          AUTH0_SECRET: ${{ secrets.AUTH0_SECRET }}
+          AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+          DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
