Updated the CI test workflow with new env variables and a different testing command

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
+    "test": "npm run test:unit:ci && npm run test:integration",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "test:unit:ci": "vitest run"
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
