--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install playwright
+        run: npx playwright install
+
       - name: Run tests
         run: npm test
         env:
