--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:unit:ci": "vitest run"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.7.3",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^3.0.3",
